camunda-formio-tasklist-vue/src/styles/camundaFormIOTasklist.scss
@import "vue-select/src/scss/vue-select.scss";

.task-outer-container {
  max-width: 100vw;
  background-color: white;
  text-align: left;
  font-size: 16px;
  font-family: Nunito Sans, SemiBold;

  .bg-default {
    background-color: #38598a !important;
    border: #38598a !important;
    color: white !important;
  }

  .cft-not-selected {
    border: 3px solid #b3b3b3;
    padding: 10px;
    color: #b3b3b3;
    width: 100%;
  }

  .cft-task-filter-length {
    padding: 1px;
    font-size: 16px;
  }

  .cft-filter:focus {
    outline: none;
  }

  .cft-task-row-2 {
    font-size: 15px;
  }

  .cft-task-row-3 {
    font-size: 11px;
  }

  .cft-service-task-list {
    box-shadow: 0 0 10px 5px #D0D0D0;
    clip-path: inset(0px -15px 0px 0px);
    padding: 0rem 1.25rem !important;
    border-top: 1px solid #ced4da !important;
    padding-right: 25px;
    border-right: 2px solid #D0D0D0;
  }

  .cft-service-task-details {
    min-height: 80vh;
  }

  .cft-task-header {
    font-size: 30px;
    font-weight: 600;
    color: #212529;
    padding-top: 5px;
    cursor: pointer;
    width: auto;
  }

  .cft-selected {
    border-left: 5px solid #003366 !important;
  }

  .cft-filter-selected {
    font-size: medium;
    border-left: 2px solid #003366 !important;
  }

  .cft-diagram-container {
    height: 100%;
  }

  .cft-canvas-container {
    height: 100%;
  }

  .cft-actionable-container {
    height: 100%;
  }

  .cft-actionable {
    color: #1a5a96;
    background-color: transparent;
    cursor: pointer;
    margin: 10px 0;
    font-size: 16px;
    height: 25%;
  }

  .cft-select-task {
    color: #212529;
    text-align: left;
  }

  .cft-task-assignee {
    font-weight: 500;
    font-size: 16px;
    text-align: right;
    justify-content: flex-end;
  }

  .cft-filter-dropbtn {
    background-color: #1a5a96;
    color: white;
    font-size: 20px;
    border: none;
    cursor: pointer;
    padding: 5px 9px;
  }

  .cft-input-filter {
    display: flex;
    justify-content: space-between;
  }

  .cft-filter-dropdown {
    position: relative;
  }

  .cft-sort-items {
    border: 1px solid #949494;
    border-radius: 3%;
    position: absolute;
    color: #212529;
    background-color: #fff;
    background-clip: padding-box;
    z-index: 5;
    padding: 5px;
    width: 13rem;
  }

  .cft-search-items {
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    border: 1px solid #949494;
    border-radius: 3%;
    position: absolute;
    background-color: #fff;
    z-index: 10;
    width: 15rem;
    font-size: medium;
    text-align: left;
    cursor: pointer;
    color: #333;
    font-weight: 400;
    min-width: 250px;
  }

  .cft-search-item-selected {
    border-left: 2px solid #c44023 !important;
  }

  .cft-search-criteria {
    text-align: left;
    padding-top: 10px;
    padding-left: 10px;
    padding-bottom: 10px;
  }

  .cft-search-item-criteria {
    font-size: 16px;
  }

  .cftf-search-item-box {
    margin-top: 5px;
    background-color: #f2dede;
    border-color: #ebccd1;
    color: #0b2d5f;
    ;
  }

  .cft-filter-dropdown-content {
    font-size: large;
    display: block;
    position: fixed;
    cursor: pointer;
    background-color: #f9f9f9;
    min-width: 250px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 2;
  }

  .cft-list-container {
    margin-top: 5px;
  }

  .cft-task-details-assign {
    display: flex;
    justify-content: space-between;
  }

  .font-11 {
    font-size: 11px;
  }

  .assigne-details {
    font-size: 15px;
    font-weight: 500;
    margin-top: 10px;

  }

  .cft-filter-sort {
    display: flex;
    justify-content: space-between;
  }

  .tabs {
    display: block;
  }

  [aria-busy=true] {
    cursor: unset !important;
  }

  .cft-paginate {
    display: flex;
    justify-content: center;
    margin-top: 15px;
  }

  #cftf-dpdown-container {
    display: flex;
    flex-wrap: wrap;
    padding: calc(6px + 2px) 15px calc(6px - 2px) 15px;
    box-shadow: 0 2px 6px -4px #555;
    background-color: #fafafa;

    .nav-link {
      padding: 0px;
    }

    span {
      color: #212529;
    }
  }

  .cftf-dpdown-box {
    margin-top: 5px;

    .fa-chevron-down {
      color: #212529;
    }

    .fa-chevron-up {
      color: #212529;
    }

    .fa-plus {
      color: #212529;
    }

    .nav-link {
      color: #212529;
    }

  }

  .cft-dpdown-inner-container {
    display: flex;
  }

  .cft-selection-box {
    width: 60%;
    margin-left: 4px;
  }

  @media(max-width: 300px) {
    .cftf-dpdown-box {
      width: 100%;
    }
  }

  .tab-content {
    height: 100%;
  }

  .vue-bpmn-diagram-container {
    height: 100%;
    width: 100%;
  }

  .cftf-exit-button {
    padding-right: 3px;
    font-weight: 700 !important;
    cursor: pointer;
    color: #212529;
  }

  .cftf-span-element {
    cursor: pointer;
    margin-right: 0.25rem;
  }

  .cftf-add-sorting {
    color: #212529;
    padding: 5px;
    margin-top: 5px;
    position: relative;

    .nav-link {
      color: #212529;
    }
  }

  p{
    white-space: normal;
  }

  .cft-form-title {
    cursor: pointer;
    color: #4d61fc;
    border-bottom: 1px solid #4d61fc;
    background-color: transparent;
  }

  .main-filters {
    display: flex;
    justify-content: flex-start;
    align-items: center;
  }

  .cft-task-title {
    font-size: 16px;
    margin: 0;
  }

  .cft-process-title {
    font-size: 16px;
    font-weight: 500;
  }

  .created-details {
    display: flex;
    width: 100%;
    justify-content: space-between;
  }

  .height-100 {
    min-height: 100%;
    overflow-x: hidden;
  }

  .cft-priority {
    text-align: right;
  }

  .cft-process-title[data-title]:hover:after,
  .cft-task-title[data-title]:hover:after,
  .cft-priority[data-title]:hover:after,
  .cft-task-assignee[data-title]:hover:after {
    font-size: 12px;
    content: attr(data-title);
    padding: 4px 8px;
    color: rgb(255, 255, 255);
    position: absolute;
    background-color: rgb(0, 0, 0);
    right: 3rem;
    top: 100%;
    white-space: nowrap;
    z-index: 1;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    -moz-box-shadow: 0px 0px 4px #222;
    -webkit-box-shadow: 0px 0px 4px #222;
    box-shadow: 0px 0px 4px #222;
    background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #eeeeee), color-stop(1, #cccccc));
    background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
    background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
    background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
    background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
  }

  .cft-application-id {
    display: block;
    height: auto;
    width: 20%;
    cursor: pointer;
  }

  .cft-task-name {
    height: 20px;
    width: 30%;
    cursor: pointer;
    font-size: 20px;
    font-weight: 400;
    color: #212529;
  }

  .cft-task-assignee[data-title]:hover:after {
    width: 80%;
  }

  .cftf-form-conatiner {
    background-color: white;

    .cftf-taskhead {
      font-weight: bold;
      font-size: 30px;
      margin-left: 10px;
      display: flex;
    }

    .cftf-table-align {
      text-align: left;
    }
  }

  .cft-form-list-paginate {
    display: flex;
    justify-content: center;
    margin-top: 15px;
    padding: 0px;
  }

  .cft-user-select {
    width: 70%;
    height: none;
    color: #01060a;
    font-weight: 500;
    font-size: 14px;
    border: 3px solid #b3b3b3;
  }

  .cft-user-close {
    position: relative;
    color: #1a5a96;
    font-family: Nunito Sans, SemiBold;
    font-weight: bold;
  }

  .cft-person-fill {
    padding-right: 3px;
  }

  .cft-user-details {
    position: absolute;
  }

  .custom-select {
    height: auto;
    vertical-align: top;
    width: 80% !important;
  }

  .custom-select:focus {
    border-color: none !important;
    box-shadow: none;
  }

  .diagram-full-screen {
    height: 100vh;
    min-height: 100vh;
  }

  .card {
    white-space: normal;
  }

  li {
    list-style-type: none;
  }

  .cft-nav-backgroup,
  .cft-nav-backgroup:hover {
    background-color: #1a5a96;
    border: #38598a !important;
  }

  .cft-filter-header {
    color: white;
  }

  .assignee-tickmark-icon {
    font-size: 1.7em;
  }

  .assignee-cancel-icon {
    font-size: 1.7em;
  }

  //TODO Remove this when Semantic UI css is removed. Semantic UI css override formio css tooltip

  [data-tooltip]:before {
    visibility: unset !important;
    position: initial !important;
    box-shadow: none !important;
    opacity: 1 !important;
    cursor: pointer !important;
    // content is overiding as  empty string in integrated system,
    // below coded added to fix the issue in integrated system
    content: "\f059" !important;
    color: #2780e3;
  }

  [data-tooltip]:after {
    opacity: 0 !important;
  }

  .icon-right-side {
    left: 8.3em;
  }

  .icon-border {
    padding: 0.20rem 0.15rem !important;
    border: 1px solid rgb(184, 184, 184) !important;
  }

  .tooltip-inner {
    background-color: white;
    color: black;
    box-shadow: 1px 1px 1px 1px;
  }

  .tooltip-inner a {
    color: #2780e3;
  }

  .cft-actionable-container .form-tab-conatiner a {
    color: #2780e3;
    border-bottom-style: none;
  }

  .row .v-select .vs__dropdown-toggle {
    width: 100%;
  }

  .cft-group-align {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    word-break: break-all;
    width: 100%;
  }

  .assignee-align {
    width: 50% !important;
    height: 34px !important;
    border: 1px solid #000000;
    border-radius: 4px;
  }

  .cft-assignee-change-box .assignee-align .vs__selected {
    white-space: nowrap;
    width: 50%;
    overflow: hidden;
    text-overflow: clip;
  }

  .word-break {
    word-break: break-all;
  }

  .cft-height {
    overflow: scroll !important;
    height: 93vh;
  }

  .mx-datepicker {
    width: 100%;
  }

  .tasklist-container {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }

  .cft-form-list-paginate {
    display: flex;
    justify-content: center;
    margin-top: 15px;
    padding: 0px;
  }

  .cft-user-select {
    width: 70%;
    height: none;
    color: #01060a;
    font-weight: 500;
    font-size: 14px;
    border: 3px solid #b3b3b3;
  }

  .cft-user-close {
    position: relative;
    color: #1a5a96;
    font-family: Nunito Sans, SemiBold;
    font-weight: bold;
  }
}

